--- a/ResumeProject.html
+++ b/ResumeProject.html
@@ -7,7 +7,7 @@
     <title>Resume-Ladi Bhumika</title>
 </head>
 
-<body>
+<body style="background-color: rgb(115, 137, 215);>
     <div>
         <h1 style="text-align: center;">Ladi Bhumika</h1>
         <table>
